rating 스타일 적용방식 수정 abl, mark, stat이 가득차면 빛나는 효과 추가

--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -411,7 +411,7 @@ h2, h3 {
 }
 
 /* Rating System */
-.star-rating {
+.rating {
     --rating: 0; /* Default value */
     --percent: calc(var(--rating) / 10 * 100%);
     display: inline-block;
@@ -420,39 +420,23 @@ h2, h3 {
     line-height: 1;
 }
 
-.star-rating::before {
+.heart::before {
     content: '♥️♥️♥️♥️♥️';
     background: linear-gradient(90deg, #ec0c4f var(--percent), #555 var(--percent));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.skull-rating {
-    --rating: 0; /* Default value */
-    --percent: calc(var(--rating) / 10 * 100%);
-    display: inline-block;
-    font-size: 0.75rem;
-    font-family: 'Times New Roman', Times, serif;
-    line-height: 1;
-}
-
-.skull-rating::before {
+.skull::before {
     content: '☠️☠️☠️☠️☠️';
-    background: linear-gradient(90deg, #ffffff var(--percent), #555 var(--percent));
+    background: linear-gradient(90deg, #ffffff var(--percent), #555 var(--percent)); /*#ffffff*/
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.mark-rating {
-    --rating: 0; /* Default value */
-    --percent: calc(var(--rating) / 3 * 100%);
-    display: inline-block;
+.mark::before {
     font-size: 1rem;
-    font-family: 'Times New Roman', Times, serif;
-    line-height: 1;
-}
-
-.mark-rating::before {
+    --percent: calc(var(--rating) / 3 * 100%);
     content: '⚜️⚜️⚜️';
     background: linear-gradient(90deg, #f8c65c var(--percent), #555 var(--percent));/*ef9d4e, f8c65c*/
     -webkit-background-clip: text;
@@ -460,10 +444,26 @@ h2, h3 {
 }
 
 .neg::before {
-    content: '⚜️⚜️⚜️';
-    background: linear-gradient(90deg, #814689 var(--percent), #555 var(--percent));
+    background: linear-gradient(90deg, #bd4ece var(--percent), #555 var(--percent));/*#814689, bd4ece*/
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+}
+
+.heart.x-risu-is-full {
+    text-shadow: 0 0 0.5rem #ec0c4f, 0 0 1rem #ec0c4f;
+    -webkit-text-stroke: 1rem #ff8bb4;
+}
+
+.skull.x-risu-is-full {
+    text-shadow: 0 0 0.5rem #000, 0 0 1rem #000;
+    -webkit-text-stroke: 1rem #ffffff;
+}
+
+.mark.x-risu-is-full {
+    text-shadow: 0 0 0.5rem #d1843c , 0 0 1rem #f8c65c;
+}
+
+.neg.x-risu-is-full {
+    text-shadow: 0 0 0.5rem #6f3577, 0 0 1rem #bd4ece;
 }
 
 /* Responsive adjustments for char page */
@@ -482,7 +482,7 @@ h2, h3 {
     grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
     }
 
-    .star-rating, .skull-rating{
+    .rating{
         font-size: 0.6rem;
     }
         /*
