--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -91,8 +91,9 @@ h2, h3 {
 }
 
 .x-risu-btn:hover {
-    background-color: #555;
-    border-color: #888;
+    background-color: #333;
+    border-color: #555;
+    box-shadow: 0px 0px 15px -5px #ffffff;
 }
 
 .x-risu-btn.disabled {
