이전 조교기록을 정규식 처리 대신 변수처리 되도록 수정

--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -106,8 +106,9 @@ h2, h3 {
     border-color: #666;
 }
 
-/* --- MERGED STYLES from train.css and char.css --- */
-
+.history{
+    visibility: {{#when::history::vis::1}}visible{{:else}}hidden{{/when}};
+}
 /* --- SHARED COMPONENTS (Progress Bars & Status) --- */
 
 .x-risu-bar-container {
