--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -96,16 +96,6 @@ h2, h3 {
     box-shadow: 0px 0px 15px -5px #ffffff;
 }
 
-.x-risu-btn.disabled {
-    color: #888;
-    cursor: not-allowed;
-    background-color: #333;
-}
-.x-risu-btn.disabled:hover {
-    background-color: #333;
-    border-color: #666;
-}
-
 .history{
     visibility: {{#when::history::vis::1}}visible{{:else}}hidden{{/when}};
 }
@@ -490,35 +480,34 @@ h2, h3 {
     bottom: -0.6rem;
 }
 
+.tabs:hover {
+    background-color: #333;
+    border-color: #333;
+}
+
 .tab-content {
-    margin-top: 0;
-    padding: 1.3rem;
-    background-color: #383838;
+    background-color: #303030;
+    padding: 1.5rem;
     border: 1px solid #555;
-    border-top: none;
-    border-radius: 0 0 4px 4px;
-    min-height: 200px;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    min-height: 16rem;
 }
 
-.tab-content > .tab-pane {
-    display: none;
-}
-
-/*input[name="tabs"]:checked + label{
-    background-color: #383838;
+#{{getvar::category}}:checked + label[for="{{getvar::category}}"]{
+    background-color: #303030;
     border-color: #555;
-    border-bottom-color: #383838;
     color: #fff;
-}*/
+}
 
 
 
 /* Responsive adjustments for char page */
 @media screen and (max-width: 600px) {
     .info-grid {
-        grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
         font-size: 0.8rem;
-        }
+    }
     
     .controls-bar {
         flex-direction: column;
